[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "capport_poc"
authors = [{ name = "trxe", email = "peixianwong@gmail.com" }]
description = "POC for data pipeline framework"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "pymongo",
    "pytz",
    "requests",
    "psycopg",
    "polars",
    "pyyaml",
    "pydantic",
]

[project.optional-dependencies]
dev = ["pytest", "pylint", "black", "isort", "pytest_asyncio"]

[tool.setuptools.dynamic]
version = { file = ["version.txt"] }

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = [
    "too-many-arguments",
    "missing-class-docstring",
    "missing-module-docstring",
    "missing-function-docstring",
    "unspecified-encoding",
    "broad-exception-raised",
    "broad-exception-caught",
    "too-few-public-methods",
    "too-many-positional-arguments",
]
